title wrap fix

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -39,7 +39,7 @@
 }
 .card-image img{
     width: 100%;
-    height: 100%;
+    height: 220px;
     object-fit: cover;
 }
 .image-icon p{
@@ -54,11 +54,23 @@
 .card-title{
     font-weight: 400;
     font-size: 16px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     overflow: hidden;
     line-height: 18px;
     color: #39404a;
     padding: 5px 0px;
+}
+.card-title p{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    min-height: 38px;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    box-sizing: border-box;
+    line-height: 18px;
+    margin-bottom: 5px !important;
 }
 .card-title:hover{
     color: #70C332;
@@ -121,6 +133,7 @@
     gap: 2px;
     font-weight: 400;
     margin-top: 13px;
+    margin-bottom: 8px;
     width: 100%;
 }
 .stars i{
@@ -166,14 +179,15 @@ button{
     transition: .4s ease-in-out;
 }
 .pop-icon{
-    width: 18%;
-    padding: 12px 2px;
+    width: 40px;
+    height: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 10px;
+    border-radius: 8px;
     background: #70C332;
     color: #e8e8e8;
+    box-shadow: 0 7px 12px #0000001f
 }
 .pop-icon i{
     font-size: large;
